fix/ vertically align about section text

--- a/styles.scss
+++ b/styles.scss
@@ -145,16 +145,21 @@ header {
   }
 
   .about-img-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 500px;
-    margin: 10px;
-    padding-top: 80px;
+    margin: 20px;
+    // padding-top: 80px;
     font-size: 1.5rem;
     font-weight: 600;
   }
 
   .about-img-info > p:first-child {
-    font-size: 2rem;
-    font-weight: 700;
+    align-self: flex-start;
+    font-size: 2.2rem;
+    font-weight: 800;
   }
 }
 /////*************quality************//////////
@@ -212,7 +217,7 @@ header {
   .gallery-container p {
     text-align: center;
     font-size: 2.2rem;
-    font-weight: 700;
+    font-weight: 800;
     padding: 50px 0;
   }
 
@@ -281,7 +286,7 @@ header {
   padding-bottom: 150px;
   > p:first-child {
     font-size: 2.2rem;
-    font-weight: 700;
+    font-weight: 800;
     padding: 30px 0;
     text-align: center;
   }
